style.css
html {
    background-color: rgb(44, 44, 44);
    color: white;
    padding: 0;
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    min-height: 100%;
    display: flex;
    flex-direction: column;
}

img {
    image-rendering: pixelated;
}

@font-face {
    font-family: 'Berylium BD';
    src: url('assets/font/berylium bd.otf') format('opentype');
}

body {
    font-family: 'Berylium BD';
    margin: 0;
    padding: 0;
}

header {
    margin-left: 10%;
    margin-right: 10%;
}

nav {
    display: flex;
    background-color: rgb(32, 32, 32);
    height: 80px;
}

nav .navContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
    width: 100%;
    margin-left: 10%;
    margin-right: 10%;
}

.navContainer a {
    height: 80%;
}

.navContainer a img {
    height: 100%;
}

.navContainer div {
    height: 100%;
}

.navContainer div a {
    height: 80%;
    margin-left: 20px;
}

.navContainer div a img {
    height: 100%;
}
   
section {
    margin-top: 20px;
    margin-left: 10%;
    margin-right: 10%;
}

button {
    background-color: rgb(62, 62, 62);
    border-color: rgb(15, 15, 15);
    color: rgb(15, 15, 15);
    border-radius: 5px;
    padding: 10px;
    cursor: pointer;
}

button:hover {
    border-color: rgb(0, 255, 255);
    color: rgb(0, 225, 255);
}

button:active {
    border-color: rgb(0, 128, 128);
    color: rgb(0, 128, 128);
}

.container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    background-color: rgb(32, 32, 32);
    padding: 10px;
    border-radius: 10px;
}

@keyframes beta {
    0% { color: rgb(0, 225, 0); }
    7% { color: #2F2F2F; }
    10% { color: rgb(0, 255, 0); }
    17% { color: #2F2F2F; }
    20% { color: rgb(0, 255, 0); }
    25% { color: rgb(0, 255, 0); }
    30% { color: #2F2F2F; }
    40% { color: #2F2F2F; }
    43% { color: rgb(0, 255, 0); }
    50% { color: #2F2F2F; }
    53% { color: rgb(0, 255, 0); }
    63% { color: rgb(0, 255, 0); }
    70% { color: #2F2F2F; }
    73% { color: rgb(0, 255, 0); }
    80% { color: #2F2F2F; }
    85% { color: #2F2F2F; }
    93% { color: rgb(0, 255, 0); }
    95% { color: #2F2F2F; }
    100% { color: rgb(0, 255, 0); }
}

.beta::before {
    content: "β ";
  }

.beta {
    animation: beta 10s infinite;
}

@keyframes ruined {
    0% { color: rgb(0, 225, 225); }
    7% { color: #2F2F2F; }
    10% { color: rgb(0, 255, 225); }
    17% { color: #2F2F2F; }
    20% { color: rgb(0, 255, 225); }
    25% { color: rgb(0, 255, 225); }
    30% { color: #2F2F2F; }
    40% { color: #2F2F2F; }
    43% { color: rgb(0, 255, 225); }
    50% { color: #2F2F2F; }
    53% { color: rgb(0, 255, 225); }
    63% { color: rgb(0, 255, 225); }
    70% { color: #2F2F2F; }
    73% { color: rgb(0, 255, 225); }
    80% { color: #2F2F2F; }
    85% { color: #2F2F2F; }
    93% { color: rgb(0, 255, 225); }
    95% { color: #2F2F2F; }
    100% { color: rgb(0, 255, 225); }
}

.ruined {
    animation: ruined 10s infinite;
}

.flex {
    display: flex;
    justify-content: center;
    align-items: center;
}

.plan {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-top: 10px;
}

.title {
    font-size: 2em;
    margin-top: 10px;
    margin-bottom: 10px;
}

.game-prefiew {
    display: flex;
    background-color: rgb(32, 32, 32);
    border-radius: 10px;
}
.game-prefiew-image {
    width: 60%;
}

#main-image {
    width: 100%;
}

.game-prefiew-image div {
    display: flex;
    justify-content: space-between;
    width: 100%;
}

.game-prefiew-image div div {
    width: 20%;
}

.game-prefiew-image div div img {
    padding: 5px;
    width: 100%;
}

.game-prefiew-info {
    width: 40%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px;
}

.cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
.card {
    display: flex;
    flex-direction: column;
    background-color: rgb(32, 32, 32);
    padding: 10px;
    border-radius: 10px;
    margin-bottom: 30px;
}
.card-img {
    width: 100%;
}
footer {
    margin-top: auto;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(32, 32, 32);
    height: 200px;
}
.navbar-object {
    height: 80px;
}
.footer-object {
    margin-top: auto;
}
.social-icons {
    margin-top: 5px;
    display: flex;
    justify-content: center;
    min-width: 20%;
}
.social-icons div {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.platform {
    width: 32px;
    margin-top: 10px;
    image-rendering: optimizeQuality;
}

.server-info {
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-top: 10px;
}

.ranks-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 10px;
}

.ranks-info div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

}

.skin3d {
    height: 300px;
}

object {
    width: 100%;
}

iframe {
    width: 100%;
    height: 500px;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.ranks {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    background-color: rgb(32, 32, 32);
    padding: 10px;
    border-radius: 10px;
    margin-bottom: 30px;
}

.rank  {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: rgb(51, 51, 51);
    padding: 10px;
    width: 300px;
    border: #2e2e2e 1px solid;
    border-radius: 10px;
    margin: 10px;
}
.rank p {
    width: 100%;
    margin: 0;
}

.rank hr {
    width: 100%;
    margin: 10px;
}

.rank-image {
    width: 100px;
}

.terms {
    opacity: 0.05;
}

.terms p {
    margin: 0;
}

a {
    color: rgb(15, 15, 15);
    text-decoration: none;
}

a:hover {
    color: rgb(0, 255, 255);
}

.grayBar {
    background-color: rgb(70, 70, 70);
    border-radius: 5px;
    height: 10px;
    width: 100%;
}

.green {
    background-color: rgb(0, 172, 0);
    border-radius: 5px;
    height: 10px;
    width: 20%;
    animation: green 2s;
}

@keyframes green {
    0% { width: 0%; }
    100% { width: 20%; }
}

@media (max-width: 600px) {
    .game-prefiew {
        display: flex;
        flex-wrap: wrap;
        background-color: rgb(32, 32, 32);
        border-radius: 10px;
    }
    .game-prefiew-image {
        width: 100%;
        
    }
    .game-prefiew-info {
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        padding: 10px;
    }
    section {
        margin-top: 20px;
        margin-left: 0%;
        margin-right: 0%;
    }
    .cards {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
    
    }
    nav {
        height: 50px;
    }
    .navbar-object {
        height: 50px;
    }
    .plan {
        display: block;
        justify-content: space-around;
        align-items: center;
        margin-top: 10px;
    }
}

